Fix conditional required field for Chrome
On Chrome (and Chrome-like) the required message was not showed for the
selected hazard field because consider that the field is not visible.
Firefox shows the message as long as the field is not hidden (using
display property). 1px is enough so that Chrome consider the field as
visible and renders the error message.

--- a/tiac/static/tiac/investigation.css
+++ b/tiac/static/tiac/investigation.css
@@ -47,5 +47,5 @@ fieldset.form-fieldset.analyses-alimentaires-fieldset {
 #id_selected_hazard {
     opacity: 0;
     height: 0;
-    padding: 0;
+    padding: 1px;
 }
